nonPH_analysis/MDS/logs/archives/breps_mds449589.err
  File "/scratch/tyoeasley/brain_representations/src_py/run_MDS.py", line 24
    print(dist_mtx_array.shape)
        ^
SyntaxError: invalid syntax
